<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pelicancross.pelicancross.PeliCross"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/button_play"
            android:onClick="play" />

        <Button
            android:id="@+id/buttonRank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkorange"
            android:onClick="showRank"
            android:text="@string/button_rank" />

        <Button
            android:id="@+id/buttonInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red"
            android:scrollHorizontally="true"
            android:text="@string/button_instructions"
            android:onClick="showInstructions" />
        
        <Button
            android:id="@+id/buttonExitApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:scrollHorizontally="true"
            android:text="@string/stop"
            android:onClick="exitApp" />

    </LinearLayout>

</FrameLayout>

